# pcap-sleuth

./: .gitignore  Cargo.toml  README.md  sample-config.toml
.github/workflows/: rust.yml
src/: main.rs
tests/: cli_test.rs  suricata_tests.rs
tests/data/: minimal_eve.json  sample_eve.json
tmp/: normal_00000_20230805150331.json
