[package]
name = "pcap-sleuth"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.2"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
pnet = "0.34"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
serde_json = "1.0"
ipnetwork = "0.20"
toml = "0.8"
rayon = "1.7"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
